src/objects/Rate_Card_Widget_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Editable_Rate_Card_Line_Fields__c</fullName>
        <description>List of editable rate card line fields</description>
        <label>Editable Rate Card Line Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Fields__c</fullName>
        <label>Rate Card Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Line_Fields__c</fullName>
        <label>Rate Card Line Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Save_as_JSON__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Custom rate card will be saved as JSON attachment</inlineHelpText>
        <label>Save as JSON</label>
        <type>Checkbox</type>
    </fields>
    <label>Rate Card Widget Settings</label>
</CustomObject>